--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
 .idea/
-*/*/*/*/*/*/*/__pycache__/
-*/*/*/*/*/*/*/*/__pycache__/
-*/*/*/*/*/*/*/*/*/__pycache__/
-*/*/*/*/*/*/*/*/*/*/__pycache__/
-*/*/*/*/*/*/__pycache__/
-*/*/*/*/*/__pycache__/
-*/*/*/*/__pycache__/
-*/*/*/__pycache__/
-*/*/__pycache__/
+**/__pycache__/
