--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
+customtkinter
+CTkColorPicker
 pillow
-sv-ttk
-=======
-sv-ttk
-pillow
->>>>>>> 2530b31e373ccfbe069b3f22e27627e5ba9e476c
 numpy
